tests/ui/closures/2229_closure_analysis/optimization/edge_case.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/edge_case.rs:20:13
   |
LL |     let c = #[rustc_capture_analysis] || drop(&m.a.0);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: First Pass analysis includes:
  --> $DIR/edge_case.rs:20:39
   |
LL |     let c = #[rustc_capture_analysis] || drop(&m.a.0);
   |                                       ^^^^^^^^^^^^^^^
   |
note: Capturing m[Deref,(0, 0),Deref,(0, 0)] -> Immutable
  --> $DIR/edge_case.rs:20:48
   |
LL |     let c = #[rustc_capture_analysis] || drop(&m.a.0);
   |                                                ^^^^^

error: Min Capture analysis includes:
  --> $DIR/edge_case.rs:20:39
   |
LL |     let c = #[rustc_capture_analysis] || drop(&m.a.0);
   |                                       ^^^^^^^^^^^^^^^
   |
note: Min Capture m[Deref,(0, 0),Deref] -> Immutable
  --> $DIR/edge_case.rs:20:48
   |
LL |     let c = #[rustc_capture_analysis] || drop(&m.a.0);
   |                                                ^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
